src/tests/routes/users/update/snapshots/all__routes__users__update__publish_notifications__unsubscribe_and_resubscribe.snap
---
source: src/tests/routes/users/update/publish_notifications.rs
expression: app.emails_snapshot()
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo@1.0.0
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

Hello foo!

A new version of the package foo (1.0.0) was published by your account (htt=
ps://crates.io/users/foo) at [0000-00-00T00:00:00Z].

If you have questions or security concerns, you can contact us at help@crat=
es.io. If you would like to stop receiving these security notifications, yo=
u can disable them in your account settings.
